# gh-apple-notes-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.sh
docs/superpowers/plans/: 2026-04-17-fts-trigram-fallback.md
docs/superpowers/specs/: 2026-04-17-fts-trigram-fallback-design.md
src/gh_apple_notes_mcp/: __main__.py  applescript_reader.py  applescript_writer.py  config.py  schemas.py  server.py  sqlite_reader.py
src/gh_apple_notes_mcp/semantic/: config.py  fts_index.py  indexer.py  llm_rank.py  markdown_reader.py  search.py  state.py
tests/: conftest.py  test_applescript_reader.py  test_applescript_writer.py  test_config.py  test_e2e_mcp.py  test_fts_index.py  test_fts_migration.py  test_fts_search_fallback.py  test_fts_trigram.py  test_indexer.py  test_llm_rank.py  test_markdown_reader.py  test_schemas.py  test_search.py  test_semantic_config.py  test_semantic_e2e.py  test_semantic_state.py  test_server_handlers.py
tests/fixtures/: build_vault_fixture.py  fake_osascript.sh
